arreglo del estandar

--- a/HiveGameClient/HiveGameWPFApp/Views/EditCredentialsView.xaml
+++ b/HiveGameClient/HiveGameWPFApp/Views/EditCredentialsView.xaml
@@ -93,7 +93,7 @@
                         </Border>
                     </StackPanel>
 
-                    <TextBlock x:Name="txt_Timer" Text="{x:Static p:Resources.txt_Timer}"
+                    <TextBlock x:Name="txtb_Timer" Text="{x:Static p:Resources.txt_Timer}"
                            Foreground="Gray" 
                            FontWeight="Medium"
                            FontSize="25"
@@ -101,7 +101,7 @@
                            VerticalAlignment="Top" 
                            Margin="0,612,0,0"/>
 
-                    <TextBlock x:Name="txt_ResendLink" Text="{x:Static p:Resources.lbl_NoReceivedCode}"
+                    <TextBlock x:Name="txtb_ResendLink" Text="{x:Static p:Resources.lbl_NoReceivedCode}"
                        Foreground="White" 
                        FontSize="20" 
                        HorizontalAlignment="Left" 
@@ -110,7 +110,7 @@
                        Visibility="Collapsed">
                     </TextBlock>
 
-                    <TextBlock  x:Name="txt_ResendCodeClick" Text="{x:Static p:Resources.lbl_ResendCode}"
+                    <TextBlock  x:Name="txtb_ResendCodeClick" Text="{x:Static p:Resources.lbl_ResendCode}"
                        FontSize="20" Foreground="#FFD700"
                        HorizontalAlignment="Left" VerticalAlignment="Top"
                        Margin="673,489,0,0" TextDecorations="Underline"
