--- a/HiveGameClient/HiveGameWPFApp/Views/GameBoardView.xaml
+++ b/HiveGameClient/HiveGameWPFApp/Views/GameBoardView.xaml
@@ -46,7 +46,7 @@
               VerticalAlignment="Stretch"
               Panel.ZIndex="100">
 
-                <TextBlock x:Name="txtBlock_VictoryMessage"
+                <TextBlock x:Name="txtb_VictoryMessage"
                Text="¡Victoria absoluta!"
                FontSize="25"
                FontFamily="Impact"
@@ -64,8 +64,8 @@
 
 
 
-            <TextBlock x:Name="txtBlock_TurnOf" Foreground="Black" TextWrapping="Wrap" Text="{x:Static p:Resources.txtbl_TurnOf}" FontSize="40" FontFamily="Impact"  Margin="992,336,152,340" />
-            <TextBlock x:Name="txtBlock_PlayerName" TextWrapping="Wrap" Text="{x:Static p:Resources.txtbl_Player1}" FontSize="30" FontFamily="Impact"  Margin="992,390,124,290"/>
+            <TextBlock x:Name="txtb_TurnOf" Foreground="Black" TextWrapping="Wrap" Text="{x:Static p:Resources.txtbl_TurnOf}" FontSize="40" FontFamily="Impact"  Margin="992,336,152,340" />
+            <TextBlock x:Name="txtb_PlayerName" TextWrapping="Wrap" Text="{x:Static p:Resources.txtbl_Player1}" FontSize="30" FontFamily="Impact"  Margin="992,390,124,290"/>
 
             <DockPanel>
                 <StackPanel x:Name="stckp_Player2" DockPanel.Dock="Top" Orientation="Horizontal" HorizontalAlignment="Center">
@@ -77,7 +77,7 @@
                             </Viewbox>
                         </Grid>
                     </Border>
-                    <TextBlock x:Name="txtBlock_PlayerName2" Text="{x:Static p:Resources.txtbl_Player2}" FontSize="30" FontFamily="Impact"  Margin="40"/>
+                    <TextBlock x:Name="txtb_PlayerName2" Text="{x:Static p:Resources.txtbl_Player2}" FontSize="30" FontFamily="Impact"  Margin="40"/>
                     <StackPanel x:Name="stckp_Player2Pieces" Orientation="Horizontal" Margin="10" Cursor="Hand"/>
                 </StackPanel>
 
@@ -90,7 +90,7 @@
                             </Viewbox>
                         </Grid>
                     </Border>
-                    <TextBlock x:Name="txtBlock_PlayerName1" Text="{x:Static p:Resources.txtbl_Player1}" FontSize="30" FontFamily="Impact"  Margin="40"/>
+                    <TextBlock x:Name="txtb_PlayerName1" Text="{x:Static p:Resources.txtbl_Player1}" FontSize="30" FontFamily="Impact"  Margin="40"/>
                     <StackPanel x:Name="stckp_Player1Pieces" Orientation="Horizontal" Margin="10" Cursor="Hand"/>
                 </StackPanel>
                 <Canvas x:Name="canva_GameBoardGrid" Width="450" Height="450" HorizontalAlignment="Center" VerticalAlignment="Center" Cursor="Hand"/>
