Modificación de métodos

--- a/HiveGameClient/HiveGameWPFApp/Views/EditCredentialsView.xaml
+++ b/HiveGameClient/HiveGameWPFApp/Views/EditCredentialsView.xaml
@@ -9,22 +9,22 @@
       d:DesignHeight="720" d:DesignWidth="1280">
     <DockPanel>
 
-            <Grid>
-                <Border>
-                    <Border.Background>
-                        <ImageBrush ImageSource="/Images/Background/MainMenuBackground.png" Stretch="UniformToFill" />
-                    </Border.Background>
-                </Border>
-                <Image Source="/Images/Icons/Back2.png"
+        <Grid>
+            <Border>
+                <Border.Background>
+                    <ImageBrush ImageSource="/Images/Background/MainMenuBackground.png" Stretch="UniformToFill" />
+                </Border.Background>
+            </Border>
+            <Image Source="/Images/Icons/Back2.png"
                    Width="84" Height="85"
                    MouseDown="Image_MouseDown"
                    Cursor="Hand" Margin="43,19,1153,616"
                    RenderTransformOrigin="0.5,0.506" />
-                
-                <Label x:Name="lbl_ErrorMessage" Content="{x:Static p:Resources.lbl_WrondVerificationCode}"
+
+            <Label x:Name="lbl_ErrorMessage" Content="{x:Static p:Resources.lbl_WrondVerificationCode}"
                         Foreground="Red" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,250,0,0" Visibility="Collapsed"/>
 
-                <Label x:Name="lbl_editProfile" Content="{x:Static p:Resources.lbl_EditProfile}"
+            <Label x:Name="lbl_editProfile" Content="{x:Static p:Resources.lbl_EditProfile}"
                     Foreground="#e6a500"
                     FontFamily="Impact"
                     FontSize="60"
@@ -32,9 +32,9 @@
                     Margin="0,10,0,0" 
                     VerticalAlignment="Top"/>
 
-                <Grid x:Name="grd_VerificationPanel" Visibility="Visible">
+            <Grid x:Name="grd_VerificationPanel" Visibility="Visible">
 
-                    <Label x:Name="lbl_CodeSendMessage" Content="{x:Static p:Resources.lbl_CodeSendMessage}"
+                <Label x:Name="lbl_CodeSendMessage" Content="{x:Static p:Resources.lbl_CodeSendMessage}"
                        Foreground="White" 
                        FontFamily="Impact" 
                        FontSize="35"
@@ -42,7 +42,7 @@
                        VerticalAlignment="Top"
                        Margin="0,122,0,0"/>
 
-                    <Label Name="lbl_UserEmail" Content="{x:Static p:Resources.globalLbl_Email}"
+                <Label Name="lbl_UserEmail" Content="{x:Static p:Resources.globalLbl_Email}"
                        Foreground="White" 
                        FontFamily="Arial" 
                        FontSize="23"
@@ -50,7 +50,7 @@
                        VerticalAlignment="Top"
                        Margin="420,173,0,0"/>
 
-                    <Label x:Name="lbl_Email" Content="hive123@gmai.com"
+                <Label x:Name="lbl_Email" Content="hive123@gmai.com"
                         Foreground="#FFC300"
                         FontStyle="Italic"
                         FontSize="20"
@@ -58,42 +58,42 @@
                         Margin="518,175,0,0" 
                         VerticalAlignment="Top"/>
 
-                    <StackPanel Name="stckp_Bubbles" Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Center" Height="124" Width="511" Margin="407,0,0,0">
-                        <Border Width="70" Height="70" CornerRadius="70" BorderBrush="White" BorderThickness="2" Margin="5" x:Name="brd_BubbleOne">
-                            <TextBox Width="40" Height="40" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
+                <StackPanel Name="stckp_Bubbles" Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Center" Height="124" Width="511" Margin="407,0,0,0">
+                    <Border Width="70" Height="70" CornerRadius="70" BorderBrush="White" BorderThickness="2" Margin="5" x:Name="brd_BubbleOne">
+                        <TextBox Width="40" Height="40" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
                                  MaxLength="1" FontSize="30" Background="Transparent" Foreground="White" BorderThickness="0"
                                  TextChanged="TextBox_TextChanged" GotFocus="TextBox_GotFocus" LostFocus="TextBox_LostFocus" IsReadOnlyCaretVisible="False" PreviewMouseDown="TextBox_PreviewMouseDown"/>
-                        </Border>
-                        <Border Width="70" Height="70" CornerRadius="70" BorderBrush="White" BorderThickness="2" Margin="5" x:Name="brd_BubbleTwo">
-                            <TextBox Width="40" Height="40" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
+                    </Border>
+                    <Border Width="70" Height="70" CornerRadius="70" BorderBrush="White" BorderThickness="2" Margin="5" x:Name="brd_BubbleTwo">
+                        <TextBox Width="40" Height="40" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
                                  MaxLength="1" FontSize="30" Background="Transparent" Foreground="White" BorderThickness="0"
                                  TextChanged="TextBox_TextChanged" GotFocus="TextBox_GotFocus" LostFocus="TextBox_LostFocus" IsReadOnlyCaretVisible="False" PreviewMouseDown="TextBox_PreviewMouseDown"/>
-                        </Border>
+                    </Border>
 
-                        <Border Width="70" Height="70" CornerRadius="70" BorderBrush="White" BorderThickness="2" Margin="5" x:Name="brd_BubbleThree">
-                            <TextBox Width="40" Height="40" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
+                    <Border Width="70" Height="70" CornerRadius="70" BorderBrush="White" BorderThickness="2" Margin="5" x:Name="brd_BubbleThree">
+                        <TextBox Width="40" Height="40" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
                                  MaxLength="1" FontSize="30" Background="Transparent" Foreground="White" BorderThickness="0"
                                  TextChanged="TextBox_TextChanged" GotFocus="TextBox_GotFocus" LostFocus="TextBox_LostFocus" IsReadOnlyCaretVisible="False" PreviewMouseDown="TextBox_PreviewMouseDown"/>
-                        </Border>
-                        <Border Width="70" Height="70" CornerRadius="70" BorderBrush="White" BorderThickness="2" Margin="5" x:Name="brd_BubbleFour">
-                            <TextBox Width="40" Height="40" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
+                    </Border>
+                    <Border Width="70" Height="70" CornerRadius="70" BorderBrush="White" BorderThickness="2" Margin="5" x:Name="brd_BubbleFour">
+                        <TextBox Width="40" Height="40" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
                                  MaxLength="1" FontSize="30" Background="Transparent" Foreground="White" BorderThickness="0"
                                  TextChanged="TextBox_TextChanged" GotFocus="TextBox_GotFocus" LostFocus="TextBox_LostFocus" IsReadOnlyCaretVisible="False" PreviewMouseDown="TextBox_PreviewMouseDown"/>
-                        </Border>
+                    </Border>
 
-                        <Border Width="70" Height="70" CornerRadius="70" BorderBrush="White" BorderThickness="2" Margin="5" x:Name="brd_BubbleFive">
-                            <TextBox Width="40" Height="40" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
+                    <Border Width="70" Height="70" CornerRadius="70" BorderBrush="White" BorderThickness="2" Margin="5" x:Name="brd_BubbleFive">
+                        <TextBox Width="40" Height="40" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
                                  MaxLength="1" FontSize="30" Background="Transparent" Foreground="White" BorderThickness="0"
                                  TextChanged="TextBox_TextChanged" GotFocus="TextBox_GotFocus" LostFocus="TextBox_LostFocus" IsReadOnlyCaretVisible="False" PreviewMouseDown="TextBox_PreviewMouseDown"/>
-                        </Border>
-                        <Border Width="70" Height="70" CornerRadius="70" BorderBrush="White" BorderThickness="2" Margin="5" x:Name="brd_BubbleSix">
-                            <TextBox Width="40" Height="40" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
+                    </Border>
+                    <Border Width="70" Height="70" CornerRadius="70" BorderBrush="White" BorderThickness="2" Margin="5" x:Name="brd_BubbleSix">
+                        <TextBox Width="40" Height="40" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
                                  MaxLength="1" FontSize="30" Background="Transparent" Foreground="White" BorderThickness="0"
                                  TextChanged="TextBox_TextChanged" GotFocus="TextBox_GotFocus" LostFocus="TextBox_LostFocus" IsReadOnlyCaretVisible="False" PreviewMouseDown="TextBox_PreviewMouseDown"/>
-                        </Border>
-                    </StackPanel>
+                    </Border>
+                </StackPanel>
 
-                    <TextBlock x:Name="txtb_Timer" Text="{x:Static p:Resources.txt_Timer}"
+                <TextBlock x:Name="txtb_Timer" Text="{x:Static p:Resources.txt_Timer}"
                            Foreground="Gray" 
                            FontWeight="Medium"
                            FontSize="25"
@@ -101,16 +101,16 @@
                            VerticalAlignment="Top" 
                            Margin="0,612,0,0"/>
 
-                    <TextBlock x:Name="txtb_ResendLink" Text="{x:Static p:Resources.lbl_NoReceivedCode}"
+                <TextBlock x:Name="txtb_ResendLink" Text="{x:Static p:Resources.lbl_NoReceivedCode}"
                        Foreground="White" 
                        FontSize="20" 
                        HorizontalAlignment="Left" 
                        VerticalAlignment="Top" 
                        Margin="367,487,0,0" 
                        Visibility="Collapsed">
-                    </TextBlock>
+                </TextBlock>
 
-                    <TextBlock  x:Name="txtb_ResendCodeClick" Text="{x:Static p:Resources.lbl_ResendCode}"
+                <TextBlock  x:Name="txtb_ResendCodeClick" Text="{x:Static p:Resources.lbl_ResendCode}"
                        FontSize="20" Foreground="#FFD700"
                        HorizontalAlignment="Left" VerticalAlignment="Top"
                        Margin="673,489,0,0" TextDecorations="Underline"
@@ -118,17 +118,17 @@
                        Visibility="Collapsed"
                        MouseLeftButtonDown="BtnResendCode_Click">
 
-                        <TextBlock.Effect>
-                            <DropShadowEffect Color="Black" ShadowDepth="2" Opacity="0.7" BlurRadius="5" />
-                        </TextBlock.Effect>
-                    </TextBlock>
+                    <TextBlock.Effect>
+                        <DropShadowEffect Color="Black" ShadowDepth="2" Opacity="0.7" BlurRadius="5" />
+                    </TextBlock.Effect>
+                </TextBlock>
 
-                </Grid>
+            </Grid>
 
-                <Grid x:Name="grd_EditionPanel" Visibility="Collapsed">
-                    <StackPanel x:Name="NewPasswordSection" VerticalAlignment="Top" HorizontalAlignment="Center"  Margin="0,141,0,0" Width="574">
-                        <Label x:Name="lbl_EmailUpdate" Foreground="#FFC300" FontWeight="Bold" FontSize="25" Content="{x:Static p:Resources.globalLbl_Email}"/>
-                        <TextBox x:Name="txt_Email"
+            <Grid x:Name="grd_EditionPanel" Visibility="Collapsed">
+                <StackPanel x:Name="NewPasswordSection" VerticalAlignment="Top" HorizontalAlignment="Center"  Margin="0,141,0,0" Width="574">
+                    <Label x:Name="lbl_EmailUpdate" Foreground="#FFC300" FontWeight="Bold" FontSize="25" Content="{x:Static p:Resources.globalLbl_Email}"/>
+                    <TextBox x:Name="txt_Email"
                              MaxLength="255"
                              Width="574"
                              Height="40"
@@ -139,13 +139,28 @@
                              BorderThickness="2"
                              Padding="5"
                              FontSize="18">
-                            <TextBox.Effect>
+                        <TextBox.Effect>
+                            <DropShadowEffect Color="Black" ShadowDepth="3" Opacity="0.5" BlurRadius="10"/>
+                        </TextBox.Effect>
+                    </TextBox>
+                    <Label Name="lbl_NewPassword"  Content="{x:Static p:Resources.lbl_NewPassword}" Foreground="#FFC300" FontWeight="Bold" FontSize="25"/>
+                    <Border x:Name="brd_Password" CornerRadius="5" BorderBrush="#FFC300" BorderThickness="2" Height="40" Grid.Column="0"   >
+                        <PasswordBox x:Name="pwb_Password"
+                                 FontSize="18"
+                                 FontWeight="Medium"
+                                 FontFamily="Segoe UI Variable Display"
+                                 Background="#1C1C1C"
+                                 Foreground="White"
+                                 BorderThickness="0"
+                                 Padding="5">
+                            <PasswordBox.Effect>
                                 <DropShadowEffect Color="Black" ShadowDepth="3" Opacity="0.5" BlurRadius="10"/>
-                            </TextBox.Effect>
-                        </TextBox>
-                        <Label Name="lbl_NewPassword"  Content="{x:Static p:Resources.lbl_NewPassword}" Foreground="#FFC300" FontWeight="Bold" FontSize="25"/>
-                        <Border x:Name="brd_Password" CornerRadius="5" BorderBrush="#FFC300" BorderThickness="2" Height="40" Grid.Column="0"   >
-                            <PasswordBox x:Name="pwb_Password"
+                            </PasswordBox.Effect>
+                        </PasswordBox>
+                    </Border>
+                    <Label Name="lbl_ConfirmPassword" Content="{x:Static p:Resources.lbl_ConfirmPassword}" Foreground="#FFC300" FontWeight="Bold" FontSize="25"/>
+                    <Border x:Name="brd_ConfirmPassword" CornerRadius="5" BorderBrush="#FFC300" BorderThickness="2" Height="40" Grid.Column="0"   >
+                        <PasswordBox x:Name="pwb_ConfirmPassword"
                                  FontSize="18"
                                  FontWeight="Medium"
                                  FontFamily="Segoe UI Variable Display"
@@ -153,34 +168,19 @@
                                  Foreground="White"
                                  BorderThickness="0"
                                  Padding="5">
-                                <PasswordBox.Effect>
-                                    <DropShadowEffect Color="Black" ShadowDepth="3" Opacity="0.5" BlurRadius="10"/>
-                                </PasswordBox.Effect>
-                            </PasswordBox>
-                        </Border>
-                        <Label Name="lbl_ConfirmPassword" Content="{x:Static p:Resources.lbl_ConfirmPassword}" Foreground="#FFC300" FontWeight="Bold" FontSize="25"/>
-                        <Border x:Name="brd_ConfirmPassword" CornerRadius="5" BorderBrush="#FFC300" BorderThickness="2" Height="40" Grid.Column="0"   >
-                            <PasswordBox x:Name="pwb_ConfirmPassword"
-                                 FontSize="18"
-                                 FontWeight="Medium"
-                                 FontFamily="Segoe UI Variable Display"
-                                 Background="#1C1C1C"
-                                 Foreground="White"
-                                 BorderThickness="0"
-                                 Padding="5">
-                                <PasswordBox.Effect>
-                                    <DropShadowEffect Color="Black" ShadowDepth="3" Opacity="0.5" BlurRadius="10"/>
-                                </PasswordBox.Effect>
-                            </PasswordBox>
-                        </Border>
-                        <Button x:Name="btn_ConfirmChange" Content="{x:Static p:Resources.globalbtn_Confirm}"
+                            <PasswordBox.Effect>
+                                <DropShadowEffect Color="Black" ShadowDepth="3" Opacity="0.5" BlurRadius="10"/>
+                            </PasswordBox.Effect>
+                        </PasswordBox>
+                    </Border>
+                    <Button x:Name="btn_ConfirmChange" Content="{x:Static p:Resources.globalbtn_Confirm}"
                             Width="234" Height="36" FontSize="24"
                             Background="#FFC300" Foreground="Black"
                             HorizontalAlignment="Center"
                             Margin="0,120,250,0" RenderTransformOrigin="0.5,0.393" 
                             Click="BtnConfirmChanges_Click" Cursor=""/>
 
-                        <Button x:Name="btn_Cancel" Content="{x:Static p:Resources.globalbtn_Cancel}"
+                    <Button x:Name="btn_Cancel" Content="{x:Static p:Resources.globalbtn_Cancel}"
                             Width="234" Height="36" FontSize="24"
                             Background="Gray" Foreground="Black"
                             HorizontalAlignment="Center"
@@ -188,10 +188,21 @@
                             Click="BtnCancelChange_Click" Cursor=""/>
 
 
-                    </StackPanel>
-                </Grid>
-
+                </StackPanel>
             </Grid>
-       
+            <TextBlock x:Name="txb_PasswordIndications"
+               Text="{x:Static p:Resources.globalTxtb_PasswordIndications}"
+               Foreground="#B0B0B0"
+               FontWeight="Bold"
+               FontSize="20"
+               HorizontalAlignment="Left"
+               VerticalAlignment="Top"
+               Margin="230,407,0,0"
+               Width="825"
+               TextWrapping="Wrap"
+               TextAlignment="Justify"
+               Visibility="Collapsed"/>
+        </Grid>
+
     </DockPanel>
 </Page>
